frontend/src/styles/utilities.css
@layer utilities {
  /* COLORS */
  .color-base {
    @apply bg-background-light dark:bg-background-dark text-light dark:text-dark;
  }

  .color-audio-disabled {
    @apply cursor-default border-2;
    @apply border-background-light dark:border-background-dark bg-inherit text-inherit;
  }

  .text-bar {
    @apply font-body text-light text-center text-sm font-bold;
  }

  /* Z-INDEX LEVELS */
  .z-header {
    /* Header */
    @apply z-50;
  }
  .z-overlay {
    /* Overlay */
    @apply z-100;
  }

  .z-help-text {
    @apply z-200;
  }

  .z-modal {
    /* Modal */
    @apply z-300;
  }
}

